syntax = "proto3";

package spotimy.v1;

import "spotimy/v1/track.proto";

service TrackHistoryService {
  rpc ListTrackHistory (ListTrackHistoryRequest) returns (ListTrackHistoryResponse) {};
}

message TrackHistoryEntry {
  spotimy.v1.Track track = 1;
  int64 timestamp = 2;
}

message ListTrackHistoryRequest {
  string user_id = 1;

  int64 start = 2;
  int64 end = 3;

  int32 limit = 4;
  string page_token = 5;
}

message ListTrackHistoryResponse {
  repeated TrackHistoryEntry entries = 1;

  string next_page_token = 2;
}